<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">CSG_Tools</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="action_settings">Settings</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="temember_user">Remember User Name</string>
    <string name="user_id">User ID</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="create_acct">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="CiscoLogo">Cisco Logo</string>
    <string name="enter_your">Enter your Cisco.com User ID and Password</string>
    <string name="remember_user">Remember User Name</string>
    <string name="cisco_app">CSG Tools App</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out? </string>
    <string name="Log_In">Log In</string>
    <string name="Log_Out">Logout</string>
    <string name="please_wait_dialog_txt">Please wait while connecting…</string>
    <string name="sign_out_dialog_txt">Signing out…</string>
    <string name="cancel_dialog_txt">Canceling…</string>
    <string name="invalid_uname_pwd_txt">Invalid Username or Password</string>
    <string name="check_nw_connection_txt">Check Network Connectivity</string>
    <string name="unable_to_login_txt">Unable to login</string>
    <string name="ok">OK</string>
    <string name="msg_welcome">Welcome to CSG Tools Application, developed by Mobile team. This application is authenticated using OAuth 2.0 standards. It renders data collected from APIs that are protected by tokens and secured Web Application content protected by ObSSOCookie</string>
    <string name="enter_text">Enter text</string>
    <string name="click">Click</string>
    <string name="tgl_switch">Toggle Switch</string>
    <string name="version">Version 0.0.1</string>
    <string name="copyright">All Contents are CopyRight @ 1992-2015</string>
    <string name="cicsosystem">Cisco Systems Inc. All Rights Reserved.</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="privacy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="titletext">CSG Tools App</string>
    <string name="showkeys">Show keys</string>
    <string name="msg_forget_passcode">Forgot Passcode?</string>
    <string name="msg_cancel">Cancel</string>
</resources>
