<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inner_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg" >

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/titletext"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/version"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textViewVersion"
        android:gravity="center"
        android:text="@string/copyright"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewciscosystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textViewCopyright"
        android:gravity="center"
        android:text="@string/cicsosystem"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonterms"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textViewciscosystem"
        android:layout_marginTop="90dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/right"
        android:gravity="left|center"
        android:text="@string/termsofuse" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/buttonprivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/buttonterms"
        android:layout_marginTop="1dp"
        android:background="@drawable/button"
        android:drawableRight="@drawable/right"
        android:gravity="left|center"
        android:text="@string/privacy" />

    <ImageView
        android:id="@+id/imageviewcisco"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/buttonprivacy"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cisco" />

    <LinearLayout
        android:id="@+id/menulayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#008bcd"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/titletext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menulayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/titletext"
        android:textSize="30sp" />

</RelativeLayout>